Fix bug in DefectMapper that led to actions, defectcomments and defectimmages being orphaned and deleted